Fix cases where the bookmarks info window would remember the last selection, even after it had been deleted. Also changes focus when losing key status so the field editor gets properly released. We seem to have lost the outlets in the bm sidebar for the info and edit buttons, re-add and re-attach them and ensure that they are disabled when there is no selection (bug 159655).